login and dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,2 @@
-<div class="container">
-  <form id="Signin">
-
-    <div class="headings">
-      <h1>yellow
-        pages</h1>
-
-      <h2>Advertise Manager</h2>
-    </div>
-
-    <div class="form-group ">
-      <label>Email</label>
-      <div class="input">
-
-        <input name="email" class="form-control " id="Emailinput" type="email">
-      </div>
-    </div>
-    <div class="form-group">
-      <label>Password</label>
-      <div class="input">
-
-        <input name="password" class="form-control " id="Pwdinput" type="password">
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="inputaddon">
-        <input type="checkbox">Remember Me
-        <span class="forgot"><a href="forgot.html">Forget password?</a></span>
-
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="btn">
-        <input class="btn1" name="btn" type="button" value="SIGN IN">
-
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="notmember">
-        Not a member? <a href="Register.html">Register</a>
-      </div>
-    </div>
-  </form>
-</div>
+<!-- <app-login></app-login> -->
+<router-outlet></router-outlet> 
