--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<p>dashboard works!</p>
+<!-- <p>dashboard works!</p> -->
 
 <nav class="nav1">
 
@@ -18,7 +18,7 @@
             <!-- <thead class="thead-dark"  data-target="#demo" data-toggle="collapse" class="btn btn-danger btn-block" aria-expanded="false" aria-controls="Collapseexample"></thead>
                 <tbody class="collapse" id="Collapseexample">     -->
             <tr>
-                <td class="buttonForm" data-toggle="collapse" data-target="#demo1">&nbsp Dashboard
+                <td class="buttonForm" data-toggle="collapse" data-target="#demo1"> Dashboard
                     <div id="demo1" class="collapse">
                         <h1>Hello world</h1>
 
@@ -29,7 +29,7 @@
             <tr>
 
                 <td class="buttonForm" data-toggle="collapse" data-target="#demo"><span><i
-                            class="fas fa-chart-area fa-3x"></i></span> &nbsp Bussiness Analytics
+                            class="fas fa-chart-area fa-3x"></i></span> Bussiness Analytics
                     <!-- <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">&nbsp Bussiness Analytics</button> -->
                     <div id="demo" class="collapse">
                         <ul>
@@ -44,7 +44,7 @@
             </tr>
             <!-- </tbody> -->
             <tr>
-                <td class="buttonForm" data-toggle="collapse" data-target="#demo2">&nbsp Create Post
+                <td class="buttonForm" data-toggle="collapse" data-target="#demo2"> Create Post
                     <div id="demo2" class="collapse">
                         <h1>Hello world</h1>
                     </div>
