--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -67,14 +67,14 @@ body{
     bottom: 0;
     
   }  */
-  .box .table{
-    margin-top: 20px;
+  /* .box .table{ */
+    /* margin-top: 20px; */
     /* margin-left:20px; */
     /* margin-right: 100px; */
-    width: 350px;
+    /* width: 350px;
     height: 600px;
-    background-color: white;
+    background-color: white; */
     /* border-radius: 15px; */
     /* border: 3px solid black; */
     /* list-style-type: none; */
-  }
+  /* } */
