--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,6 @@
 <p>login works!</p>
+<!-- @input,@output example -->
+<!-- <app-example [inputstudent]="student" (senddataonbuttonClick)="recievedfromexample($event)"></app-example> -->
 <div class="container-fluid ">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-1 col-md-7">
@@ -48,3 +50,4 @@
     </div>
   </div>
 </div>
+
