--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,22 @@
 <p>login works!</p>
+<!-- (ngSubmit)="onSubmit(userForm.value)" -->
+<div class="container">
+  
+<form  #userForm="ngForm" autocomplete="off">
+<div class="row ">
+   <div class="col-6" >
+    <div class="form-group ">
+        <label >Email</label>
+        <input name="email" class="form-control" id="Emailinput" type="email">
+      </div>
+      <div class="form-group ">
+        <label>Password</label>
+        <input name="password" class="form-control" id="Pwdinput" type="password">
+        </div>
+
+
+</div>
+
+</div>
+</form>
+</div>
