--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,29 @@
-<p>login works!</p>
+<!-- <p>login works!</p> -->
 <!-- (ngSubmit)="onSubmit(userForm.value)" -->
 <div class="container">
   
-<form  #userForm="ngForm" autocomplete="off">
+
+  
 <div class="row ">
-   <div class="col-6" >
-    <div class="form-group ">
+  
+    <div class="image col-md-5">
+      <h1>image has to be attached</h1>  
+     </div>
+     
+   <div class="loginform col-md-7 justify-content-center" >
+    <form  #userForm="ngForm" autocomplete="off">
+    <div class="form-group col-lg-9 col-sm-12 col-md-7">
         <label >Email</label>
-        <input name="email" class="form-control" id="Emailinput" type="email">
+        <input name="email" class="form-control" id="Emailinput" required type="email">
       </div>
-      <div class="form-group ">
+      <div class="form-group col-lg-9 col-sm-12 col-md-7 ">
         <label>Password</label>
-        <input name="password" class="form-control" id="Pwdinput" type="password">
+        <input name="password" class="form-control" id="Pwdinput" required type="password" >
         </div>
 
-
+      </form>
 </div>
 
 </div>
-</form>
+
 </div>
