loginpage and Register page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,18 +21,18 @@
           <h6 class="text-center">Sign into your account to continue access</h6>
         </div>
       </div>
-        <div class="form-group col-md-12">
+        <div class="form-group mt-3 col-md-12">
           <label >Email</label>
           <input name="email" class="form-control " id="Emailinput" type="email">
         </div>
-        <div class="form-group col-md-12"  >
+        <div class="form-group   mt-3 col-md-12"  >
           <label>Password</label>
 
 
           <input name="password" class="form-control " id="Pwdinput" type="password">
 
         </div>
-        <div class="form-group">
+        <div class="form-group mt-3">
           <div class="inputaddon">
             <input type="checkbox" class="chk_box">Keep me Loggedin
             <span style="float: right" class="forgot"><a href="forgot.html">Forget password?</a></span>
@@ -42,7 +42,7 @@
        
 
 
-        <div class="form-group">
+        <div class="form-group  mt-3 ">
           <div class="btn">
             <!-- <input id="btn1" [routerLink]="['/dashboard']" (click)="myClick()" [(ngModel)]="title"  class="btn1 btn-primary col-12" name="btn" type="button" value="SIGN IN"> -->
     <button  type="submit" class="btn btn-primary "  >SIGN IN</button>
@@ -51,7 +51,8 @@
 
         <div class="form-group">
           <div class="notmember col-md-10 offset-md-5">
-            Don't have any account? <a href="Register.html">Signup Now</a>
+            Don't have any account? 
+            <a routerLink="/register" routerLinkActive="active">Signup</a>
           </div>
         </div>
        
