--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -21,13 +21,13 @@
 
                 </div>
                 <div class="row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group  mt-3 col-md-6">
                         <label>Name</label>
                         <input name="entername" class="form-control " id="entername" type="text" placeholder="Name*">
 
                     </div>
 
-                    <div class="form-group col-md-6">
+                    <div class="form-group  mt-4  col-md-6">
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <button class="btn btn-outline-secondary dropdown-toggle" type="button"
@@ -47,12 +47,12 @@
 
 
                 <div class="row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group  mt-3  col-md-6">
                         <label>Email</label>
                         <input name="Email" class="form-control " id="Email" type="Email" placeholder="Email*">
 
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group  mt-3  col-md-6">
                         <label>password</label>
                         <input name="password" class="form-control " id="password" type="text" placeholder="password*">
 
@@ -60,13 +60,13 @@
                 </div>
 
                 <div class="row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group  mt-3  col-md-6">
                         <label>Company Name</label>
                         <input name="CompanyName" class="form-control " id="CompanyName" type="text"
                             placeholder="Company Name*">
 
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group  mt-3  col-md-6">
                         <label>Company Website</label>
                         <input name="CompanyWebsite" class="form-control " id="CompanyWebsite" type="text"
                             placeholder="Company Website*">
@@ -76,15 +76,16 @@
 
                 <div class="row">
 
-                    <div class="form-group col-md-6">
-                        <select class="custom-select" id="industry">
+                    <div class="form-group  mt-3 col-md-6 ">
+                        <!-- form-control input-sm -->
+                        <select class="custom-select p-2 " style="width: 300px " id="industry">
                             <option selected>Industry*</option>
                             <option value="1">Male</option>
                             <option value="2">Female</option>
                         </select>
                     </div>
-                    <div class="form-group  col-md-6">
-                        <select class="custom-select" id="Counrty">
+                    <div class="form-group  mt-3  col-md-6">
+                        <select class="custom-select p-2"  style="width: 300px "  id="Counrty">
                             <option selected>Counrty*</option>
                             <option value="1">Male</option>
                             <option value="2">Female</option>
@@ -92,12 +93,12 @@
                     </div>
                 </div>
 
-                <div class="form-group col-md-12">
+                <div class="form-group  mt-3 col-md-12">
                     <label>description</label>
                     <input name="descp" class="form-control " id="descp" type="text" placeholder="Short description/Tagline*">
 
                     </div>
-                    <div class="form-group col-md-12">
+                    <div class="form-group  mt-3  col-md-12">
                         <label>About Company </label>
                         <textarea name="descp" rows="5" class="form-control " id="about" type="textarea" placeholder="About Company*"></textarea>
     
@@ -105,14 +106,14 @@
 
 
 
-                <div class="form-group col-md-8 justify-content-center" >
+                <div class="form-group  mt-3  col-md-8 m-auto" >
                     <div class="btn">
                         <!-- <input id="btn1" [routerLink]="['/dashboard']" (click)="myClick()" [(ngModel)]="title"  class="btn1 btn-primary col-12" name="btn" type="button" value="SIGN IN"> -->
                         <button type="submit" class="btn btn-primary ">Register</button>
                     </div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group   ">
                     <div class="notmember col-md-10 offset-md-5">
                         Already have an account? <a href="Register.html"><b>Login here</b></a>
                     </div>
