--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -3,7 +3,7 @@
     padding: 70px;
     border-radius: 10px;
     border:2px solid darkcyan;
-    height: 100vh;
+    height: 100%;
     /* box-sizing: border-box */
 }
 
